parse.output
La règle est inutile dans l'analyseur à cause de conflits

   27 $@2: %empty

  154 $@6: %empty

  158 $@8: %empty


État 27 conflits: 1 décalage/réduction
État 47 conflits: 1 réduction/réduction
État 69 conflits: 1 réduction/réduction
État 347 conflits: 21 réduction/réduction
État 479 conflits: 1 décalage/réduction


Grammaire

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP

   25 $@1: %empty

   26 postfix_expression: '(' type_name ')' '{' $@1 initializer_list '}'

   27 $@2: %empty

   28 postfix_expression: '(' type_name ')' '{' $@2 initializer_list ',' '}'

   29 argument_expression_list: assignment_expression
   30                         | argument_expression_list ',' assignment_expression

   31 unary_expression: postfix_expression
   32                 | INC_OP unary_expression
   33                 | DEC_OP unary_expression
   34                 | unary_operator cast_expression
   35                 | SIZEOF unary_expression
   36                 | SIZEOF '(' type_name ')'
   37                 | ALIGNOF '(' type_name ')'

   38 unary_operator: '&'
   39               | '*'
   40               | '+'
   41               | '-'
   42               | '~'
   43               | '!'

   44 cast_expression: unary_expression
   45                | '(' type_name ')' cast_expression

   46 multiplicative_expression: cast_expression
   47                          | multiplicative_expression '*' cast_expression
   48                          | multiplicative_expression '/' cast_expression
   49                          | multiplicative_expression '%' cast_expression

   50 additive_expression: multiplicative_expression
   51                    | additive_expression '+' multiplicative_expression
   52                    | additive_expression '-' multiplicative_expression

   53 shift_expression: additive_expression
   54                 | shift_expression LEFT_OP additive_expression
   55                 | shift_expression RIGHT_OP additive_expression

   56 relational_expression: shift_expression
   57                      | relational_expression '<' shift_expression
   58                      | relational_expression '>' shift_expression
   59                      | relational_expression LE_OP shift_expression
   60                      | relational_expression GE_OP shift_expression

   61 equality_expression: relational_expression
   62                    | equality_expression EQ_OP relational_expression
   63                    | equality_expression NE_OP relational_expression

   64 and_expression: equality_expression
   65               | and_expression '&' equality_expression

   66 exclusive_or_expression: and_expression
   67                        | exclusive_or_expression '^' and_expression

   68 inclusive_or_expression: exclusive_or_expression
   69                        | inclusive_or_expression '|' exclusive_or_expression

   70 logical_and_expression: inclusive_or_expression
   71                       | logical_and_expression AND_OP inclusive_or_expression

   72 logical_or_expression: logical_and_expression
   73                      | logical_or_expression OR_OP logical_and_expression

   74 conditional_expression: logical_or_expression
   75                       | logical_or_expression '?' expression ':' conditional_expression

   76 assignment_expression: conditional_expression
   77                      | unary_expression assignment_operator assignment_expression

   78 assignment_operator: '='
   79                    | MUL_ASSIGN
   80                    | DIV_ASSIGN
   81                    | MOD_ASSIGN
   82                    | ADD_ASSIGN
   83                    | SUB_ASSIGN
   84                    | LEFT_ASSIGN
   85                    | RIGHT_ASSIGN
   86                    | AND_ASSIGN
   87                    | XOR_ASSIGN
   88                    | OR_ASSIGN

   89 expression: assignment_expression
   90           | expression ',' assignment_expression

   91 constant_expression: conditional_expression

   92 declaration: declaration_specifiers ';'
   93            | declaration_specifiers init_declarator_list ';'
   94            | static_assert_declaration

   95 declaration_specifiers: storage_class_specifier declaration_specifiers
   96                       | storage_class_specifier
   97                       | type_specifier declaration_specifiers
   98                       | type_specifier
   99                       | type_qualifier declaration_specifiers
  100                       | type_qualifier
  101                       | function_specifier declaration_specifiers
  102                       | function_specifier
  103                       | alignment_specifier declaration_specifiers
  104                       | alignment_specifier

  105 init_declarator_list: init_declarator
  106                     | init_declarator_list ',' init_declarator

  107 init_declarator: declarator '=' initializer
  108                | declarator

  109 storage_class_specifier: TYPEDEF
  110                        | EXTERN
  111                        | STATIC
  112                        | THREAD_LOCAL
  113                        | AUTO
  114                        | REGISTER

  115 type_specifier: VOID
  116               | CHAR
  117               | SHORT
  118               | INT
  119               | LONG
  120               | FLOAT
  121               | DOUBLE
  122               | SIGNED
  123               | UNSIGNED
  124               | BOOL
  125               | COMPLEX
  126               | IMAGINARY
  127               | atomic_type_specifier
  128               | struct_or_union_specifier
  129               | enum_specifier
  130               | TYPEDEF_NAME

  131 $@3: %empty

  132 struct_or_union_specifier: struct_or_union '{' $@3 struct_declaration_list '}'

  133 $@4: %empty

  134 struct_or_union_specifier: struct_or_union IDENTIFIER '{' $@4 struct_declaration_list '}'
  135                          | struct_or_union IDENTIFIER

  136 struct_or_union: STRUCT
  137                | UNION

  138 struct_declaration_list: struct_declaration
  139                        | struct_declaration_list struct_declaration

  140 struct_declaration: specifier_qualifier_list ';'
  141                   | specifier_qualifier_list struct_declarator_list ';'
  142                   | static_assert_declaration

  143 specifier_qualifier_list: type_specifier specifier_qualifier_list
  144                         | type_specifier
  145                         | type_qualifier specifier_qualifier_list
  146                         | type_qualifier

  147 struct_declarator_list: struct_declarator
  148                       | struct_declarator_list ',' struct_declarator

  149 struct_declarator: ':' constant_expression
  150                  | declarator ':' constant_expression
  151                  | declarator

  152 $@5: %empty

  153 enum_specifier: ENUM '{' $@5 enumerator_list '}'

  154 $@6: %empty

  155 enum_specifier: ENUM '{' $@6 enumerator_list ',' '}'

  156 $@7: %empty

  157 enum_specifier: ENUM IDENTIFIER '{' $@7 enumerator_list '}'

  158 $@8: %empty

  159 enum_specifier: ENUM IDENTIFIER '{' $@8 enumerator_list ',' '}'
  160               | ENUM IDENTIFIER

  161 enumerator_list: enumerator
  162                | enumerator_list ',' enumerator

  163 enumerator: enumeration_constant '=' constant_expression
  164           | enumeration_constant

  165 atomic_type_specifier: ATOMIC '(' type_name ')'

  166 type_qualifier: CONST
  167               | RESTRICT
  168               | VOLATILE
  169               | ATOMIC

  170 function_specifier: INLINE
  171                   | NORETURN

  172 alignment_specifier: ALIGNAS '(' type_name ')'
  173                    | ALIGNAS '(' constant_expression ')'

  174 declarator: pointer direct_declarator
  175           | direct_declarator

  176 direct_declarator: IDENTIFIER
  177                  | '(' declarator ')'
  178                  | direct_declarator '[' ']'
  179                  | direct_declarator '[' '*' ']'
  180                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  181                  | direct_declarator '[' STATIC assignment_expression ']'
  182                  | direct_declarator '[' type_qualifier_list '*' ']'
  183                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  184                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  185                  | direct_declarator '[' type_qualifier_list ']'
  186                  | direct_declarator '[' assignment_expression ']'
  187                  | direct_declarator '(' parameter_type_list ')'
  188                  | direct_declarator '(' ')'

  189 $@9: %empty

  190 $@10: %empty

  191 direct_declarator: direct_declarator '(' $@9 identifier_list $@10 ')'

  192 pointer: '*' type_qualifier_list pointer
  193        | '*' type_qualifier_list
  194        | '*' pointer
  195        | '*'

  196 type_qualifier_list: type_qualifier
  197                    | type_qualifier_list type_qualifier

  198 parameter_type_list: parameter_list ',' ELLIPSIS
  199                    | parameter_list

  200 parameter_list: parameter_declaration
  201               | parameter_list ',' parameter_declaration

  202 parameter_declaration: declaration_specifiers declarator
  203                      | declaration_specifiers abstract_declarator
  204                      | declaration_specifiers

  205 identifier_list: IDENTIFIER
  206                | identifier_list ',' IDENTIFIER

  207 type_name: specifier_qualifier_list abstract_declarator
  208          | specifier_qualifier_list

  209 abstract_declarator: pointer direct_abstract_declarator
  210                    | pointer
  211                    | direct_abstract_declarator

  212 direct_abstract_declarator: '(' abstract_declarator ')'
  213                           | '[' ']'
  214                           | '[' '*' ']'
  215                           | '[' STATIC type_qualifier_list assignment_expression ']'
  216                           | '[' STATIC assignment_expression ']'
  217                           | '[' type_qualifier_list STATIC assignment_expression ']'
  218                           | '[' type_qualifier_list assignment_expression ']'
  219                           | '[' type_qualifier_list ']'
  220                           | '[' assignment_expression ']'
  221                           | direct_abstract_declarator '[' ']'
  222                           | direct_abstract_declarator '[' '*' ']'
  223                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  224                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  225                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  226                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  227                           | direct_abstract_declarator '[' type_qualifier_list ']'
  228                           | direct_abstract_declarator '[' assignment_expression ']'
  229                           | '(' ')'
  230                           | '(' parameter_type_list ')'
  231                           | direct_abstract_declarator '(' ')'
  232                           | direct_abstract_declarator '(' parameter_type_list ')'

  233 initializer: '{' initializer_list '}'
  234            | '{' initializer_list ',' '}'
  235            | assignment_expression

  236 initializer_list: designation initializer
  237                 | initializer
  238                 | initializer_list ',' designation initializer
  239                 | initializer_list ',' initializer

  240 designation: designator_list '='

  241 designator_list: designator
  242                | designator_list designator

  243 designator: '[' constant_expression ']'
  244           | '.' IDENTIFIER

  245 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  246 statement: labeled_statement
  247          | compound_statement
  248          | expression_statement
  249          | selection_statement
  250          | iteration_statement
  251          | jump_statement

  252 labeled_statement: IDENTIFIER ':' statement
  253                  | CASE constant_expression ':' statement
  254                  | DEFAULT ':' statement

  255 $@11: %empty

  256 $@12: %empty

  257 compound_statement: '{' $@11 $@12 '}'

  258 $@13: %empty

  259 compound_statement: '{' $@13 block_item_list '}'

  260 block_item_list: block_item
  261                | block_item_list block_item

  262 block_item: declaration
  263           | statement

  264 expression_statement: ';'
  265                     | expression ';'

  266 selection_statement: IF '(' expression ')' statement ELSE statement
  267                    | IF '(' expression ')' statement
  268                    | SWITCH '(' expression ')' statement

  269 iteration_statement: WHILE '(' expression ')' statement
  270                    | DO statement WHILE '(' expression ')' ';'
  271                    | FOR '(' expression_statement expression_statement ')' statement
  272                    | FOR '(' expression_statement expression_statement expression ')' statement
  273                    | FOR '(' declaration expression_statement ')' statement
  274                    | FOR '(' declaration expression_statement expression ')' statement

  275 jump_statement: GOTO IDENTIFIER ';'
  276               | CONTINUE ';'
  277               | BREAK ';'
  278               | RETURN ';'
  279               | RETURN expression ';'

  280 translation_unit: external_declaration
  281                 | translation_unit external_declaration

  282 external_declaration: function_definition
  283                     | declaration

  284 function_definition: declaration_specifiers declarator declaration_list compound_statement
  285                    | declaration_specifiers declarator compound_statement

  286 declaration_list: declaration
  287                 | declaration_list declaration


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 43
'%' (37) 49
'&' (38) 38 65
'(' (40) 4 12 19 20 26 28 36 37 45 165 172 173 177 187 188 191 212
    229 230 231 232 245 266 267 268 269 270 271 272 273 274
')' (41) 4 12 19 20 26 28 36 37 45 165 172 173 177 187 188 191 212
    229 230 231 232 245 266 267 268 269 270 271 272 273 274
'*' (42) 39 47 179 182 192 193 194 195 214 222
'+' (43) 40 51
',' (44) 12 14 28 30 90 106 148 155 159 162 198 201 206 234 238 239
    245
'-' (45) 41 52
'.' (46) 21 244
'/' (47) 48
':' (58) 15 16 75 149 150 252 253 254
';' (59) 92 93 140 141 245 264 265 270 275 276 277 278 279
'<' (60) 57
'=' (61) 78 107 163 240
'>' (62) 58
'?' (63) 75
'[' (91) 18 178 179 180 181 182 183 184 185 186 213 214 215 216 217
    218 219 220 221 222 223 224 225 226 227 228 243
']' (93) 18 178 179 180 181 182 183 184 185 186 213 214 215 216 217
    218 219 220 221 222 223 224 225 226 227 228 243
'^' (94) 67
'{' (123) 26 28 132 134 153 155 157 159 233 234 257 259
'|' (124) 69
'}' (125) 26 28 132 134 153 155 157 159 233 234 257 259
'~' (126) 42
error (256)
IDENTIFIER (258) 1 9 21 22 134 135 157 159 160 176 205 206 244 252
    275
I_CONSTANT (259) 6
F_CONSTANT (260) 7
STRING_LITERAL (261) 10 245
FUNC_NAME (262) 11
SIZEOF (263) 35 36
PTR_OP (264) 22
INC_OP (265) 23 32
DEC_OP (266) 24 33
LEFT_OP (267) 54
RIGHT_OP (268) 55
LE_OP (269) 59
GE_OP (270) 60
EQ_OP (271) 62
NE_OP (272) 63
AND_OP (273) 71
OR_OP (274) 73
MUL_ASSIGN (275) 79
DIV_ASSIGN (276) 80
MOD_ASSIGN (277) 81
ADD_ASSIGN (278) 82
SUB_ASSIGN (279) 83
LEFT_ASSIGN (280) 84
RIGHT_ASSIGN (281) 85
AND_ASSIGN (282) 86
XOR_ASSIGN (283) 87
OR_ASSIGN (284) 88
TYPEDEF_NAME (285) 130
ENUMERATION_CONSTANT (286) 8
TYPEDEF (287) 109
EXTERN (288) 110
STATIC (289) 111 180 181 183 215 216 217 223 224 226
AUTO (290) 113
REGISTER (291) 114
INLINE (292) 170
CONST (293) 166
RESTRICT (294) 167
VOLATILE (295) 168
BOOL (296) 124
CHAR (297) 116
SHORT (298) 117
INT (299) 118
LONG (300) 119
SIGNED (301) 122
UNSIGNED (302) 123
FLOAT (303) 120
DOUBLE (304) 121
VOID (305) 115
COMPLEX (306) 125
IMAGINARY (307) 126
STRUCT (308) 136
UNION (309) 137
ENUM (310) 153 155 157 159 160
ELLIPSIS (311) 198
CASE (312) 253
DEFAULT (313) 16 254
IF (314) 266 267
ELSE (315) 266
SWITCH (316) 268
WHILE (317) 269 270
DO (318) 270
FOR (319) 271 272 273 274
GOTO (320) 275
CONTINUE (321) 276
BREAK (322) 277
RETURN (323) 278 279
ALIGNAS (324) 172 173
ALIGNOF (325) 37
ATOMIC (326) 165 169
GENERIC (327) 12
NORETURN (328) 171
STATIC_ASSERT (329) 245
THREAD_LOCAL (330) 112


Non-terminaux, suivis des règles où ils apparaissent

$accept (100)
    à gauche: 0
primary_expression (101)
    à gauche: 1 2 3 4 5, à droite: 17
constant (102)
    à gauche: 6 7 8, à droite: 2
enumeration_constant (103)
    à gauche: 9, à droite: 163 164
string (104)
    à gauche: 10 11, à droite: 3
generic_selection (105)
    à gauche: 12, à droite: 5
generic_assoc_list (106)
    à gauche: 13 14, à droite: 12 14
generic_association (107)
    à gauche: 15 16, à droite: 13 14
postfix_expression (108)
    à gauche: 17 18 19 20 21 22 23 24 26 28, à droite: 18 19 20 21
    22 23 24 31
$@1 (109)
    à gauche: 25, à droite: 26
$@2 (110)
    à gauche: 27, à droite: 28
argument_expression_list (111)
    à gauche: 29 30, à droite: 20 30
unary_expression (112)
    à gauche: 31 32 33 34 35 36 37, à droite: 32 33 35 44 77
unary_operator (113)
    à gauche: 38 39 40 41 42 43, à droite: 34
cast_expression (114)
    à gauche: 44 45, à droite: 34 45 46 47 48 49
multiplicative_expression (115)
    à gauche: 46 47 48 49, à droite: 47 48 49 50 51 52
additive_expression (116)
    à gauche: 50 51 52, à droite: 51 52 53 54 55
shift_expression (117)
    à gauche: 53 54 55, à droite: 54 55 56 57 58 59 60
relational_expression (118)
    à gauche: 56 57 58 59 60, à droite: 57 58 59 60 61 62 63
equality_expression (119)
    à gauche: 61 62 63, à droite: 62 63 64 65
and_expression (120)
    à gauche: 64 65, à droite: 65 66 67
exclusive_or_expression (121)
    à gauche: 66 67, à droite: 67 68 69
inclusive_or_expression (122)
    à gauche: 68 69, à droite: 69 70 71
logical_and_expression (123)
    à gauche: 70 71, à droite: 71 72 73
logical_or_expression (124)
    à gauche: 72 73, à droite: 73 74 75
conditional_expression (125)
    à gauche: 74 75, à droite: 75 76 91
assignment_expression (126)
    à gauche: 76 77, à droite: 12 15 16 29 30 77 89 90 180 181 183
    184 186 215 216 217 218 220 223 224 225 226 228 235
assignment_operator (127)
    à gauche: 78 79 80 81 82 83 84 85 86 87 88, à droite: 77
expression (128)
    à gauche: 89 90, à droite: 4 18 75 90 265 266 267 268 269 270
    272 274 279
constant_expression (129)
    à gauche: 91, à droite: 149 150 163 173 243 245 253
declaration (130)
    à gauche: 92 93 94, à droite: 262 273 274 283 286 287
declaration_specifiers (131)
    à gauche: 95 96 97 98 99 100 101 102 103 104, à droite: 92 93
    95 97 99 101 103 202 203 204 284 285
init_declarator_list (132)
    à gauche: 105 106, à droite: 93 106
init_declarator (133)
    à gauche: 107 108, à droite: 105 106
storage_class_specifier (134)
    à gauche: 109 110 111 112 113 114, à droite: 95 96
type_specifier (135)
    à gauche: 115 116 117 118 119 120 121 122 123 124 125 126 127
    128 129 130, à droite: 97 98 143 144
struct_or_union_specifier (136)
    à gauche: 132 134 135, à droite: 128
$@3 (137)
    à gauche: 131, à droite: 132
$@4 (138)
    à gauche: 133, à droite: 134
struct_or_union (139)
    à gauche: 136 137, à droite: 132 134 135
struct_declaration_list (140)
    à gauche: 138 139, à droite: 132 134 139
struct_declaration (141)
    à gauche: 140 141 142, à droite: 138 139
specifier_qualifier_list (142)
    à gauche: 143 144 145 146, à droite: 140 141 143 145 207 208
struct_declarator_list (143)
    à gauche: 147 148, à droite: 141 148
struct_declarator (144)
    à gauche: 149 150 151, à droite: 147 148
enum_specifier (145)
    à gauche: 153 155 157 159 160, à droite: 129
$@5 (146)
    à gauche: 152, à droite: 153
$@6 (147)
    à gauche: 154, à droite: 155
$@7 (148)
    à gauche: 156, à droite: 157
$@8 (149)
    à gauche: 158, à droite: 159
enumerator_list (150)
    à gauche: 161 162, à droite: 153 155 157 159 162
enumerator (151)
    à gauche: 163 164, à droite: 161 162
atomic_type_specifier (152)
    à gauche: 165, à droite: 127
type_qualifier (153)
    à gauche: 166 167 168 169, à droite: 99 100 145 146 196 197
function_specifier (154)
    à gauche: 170 171, à droite: 101 102
alignment_specifier (155)
    à gauche: 172 173, à droite: 103 104
declarator (156)
    à gauche: 174 175, à droite: 107 108 150 151 177 202 284 285
direct_declarator (157)
    à gauche: 176 177 178 179 180 181 182 183 184 185 186 187 188
    191, à droite: 174 175 178 179 180 181 182 183 184 185 186 187
    188 191
$@9 (158)
    à gauche: 189, à droite: 191
$@10 (159)
    à gauche: 190, à droite: 191
pointer (160)
    à gauche: 192 193 194 195, à droite: 174 192 194 209 210
type_qualifier_list (161)
    à gauche: 196 197, à droite: 180 182 183 184 185 192 193 197
    215 217 218 219 223 225 226 227
parameter_type_list (162)
    à gauche: 198 199, à droite: 187 230 232
parameter_list (163)
    à gauche: 200 201, à droite: 198 199 201
parameter_declaration (164)
    à gauche: 202 203 204, à droite: 200 201
identifier_list (165)
    à gauche: 205 206, à droite: 191 206
type_name (166)
    à gauche: 207 208, à droite: 15 26 28 36 37 45 165 172
abstract_declarator (167)
    à gauche: 209 210 211, à droite: 203 207 212
direct_abstract_declarator (168)
    à gauche: 212 213 214 215 216 217 218 219 220 221 222 223 224
    225 226 227 228 229 230 231 232, à droite: 209 211 221 222 223
    224 225 226 227 228 231 232
initializer (169)
    à gauche: 233 234 235, à droite: 107 236 237 238 239
initializer_list (170)
    à gauche: 236 237 238 239, à droite: 26 28 233 234 238 239
designation (171)
    à gauche: 240, à droite: 236 238
designator_list (172)
    à gauche: 241 242, à droite: 240 242
designator (173)
    à gauche: 243 244, à droite: 241 242
static_assert_declaration (174)
    à gauche: 245, à droite: 94 142
statement (175)
    à gauche: 246 247 248 249 250 251, à droite: 252 253 254 263
    266 267 268 269 270 271 272 273 274
labeled_statement (176)
    à gauche: 252 253 254, à droite: 246
compound_statement (177)
    à gauche: 257 259, à droite: 247 284 285
$@11 (178)
    à gauche: 255, à droite: 257
$@12 (179)
    à gauche: 256, à droite: 257
$@13 (180)
    à gauche: 258, à droite: 259
block_item_list (181)
    à gauche: 260 261, à droite: 259 261
block_item (182)
    à gauche: 262 263, à droite: 260 261
expression_statement (183)
    à gauche: 264 265, à droite: 248 271 272 273 274
selection_statement (184)
    à gauche: 266 267 268, à droite: 249
iteration_statement (185)
    à gauche: 269 270 271 272 273 274, à droite: 250
jump_statement (186)
    à gauche: 275 276 277 278 279, à droite: 251
translation_unit (187)
    à gauche: 280 281, à droite: 0 281
external_declaration (188)
    à gauche: 282 283, à droite: 280 281
function_definition (189)
    à gauche: 284 285, à droite: 282
declaration_list (190)
    à gauche: 286 287, à droite: 284 287


État 0

    0 $accept: . translation_unit $end

    TYPEDEF_NAME   décalage et aller à l'état 1
    TYPEDEF        décalage et aller à l'état 2
    EXTERN         décalage et aller à l'état 3
    STATIC         décalage et aller à l'état 4
    AUTO           décalage et aller à l'état 5
    REGISTER       décalage et aller à l'état 6
    INLINE         décalage et aller à l'état 7
    CONST          décalage et aller à l'état 8
    RESTRICT       décalage et aller à l'état 9
    VOLATILE       décalage et aller à l'état 10
    BOOL           décalage et aller à l'état 11
    CHAR           décalage et aller à l'état 12
    SHORT          décalage et aller à l'état 13
    INT            décalage et aller à l'état 14
    LONG           décalage et aller à l'état 15
    SIGNED         décalage et aller à l'état 16
    UNSIGNED       décalage et aller à l'état 17
    FLOAT          décalage et aller à l'état 18
    DOUBLE         décalage et aller à l'état 19
    VOID           décalage et aller à l'état 20
    COMPLEX        décalage et aller à l'état 21
    IMAGINARY      décalage et aller à l'état 22
    STRUCT         décalage et aller à l'état 23
    UNION          décalage et aller à l'état 24
    ENUM           décalage et aller à l'état 25
    ALIGNAS        décalage et aller à l'état 26
    ATOMIC         décalage et aller à l'état 27
    NORETURN       décalage et aller à l'état 28
    STATIC_ASSERT  décalage et aller à l'état 29
    THREAD_LOCAL   décalage et aller à l'état 30

    declaration                aller à l'état 31
    declaration_specifiers     aller à l'état 32
    storage_class_specifier    aller à l'état 33
    type_specifier             aller à l'état 34
    struct_or_union_specifier  aller à l'état 35
    struct_or_union            aller à l'état 36
    enum_specifier             aller à l'état 37
    atomic_type_specifier      aller à l'état 38
    type_qualifier             aller à l'état 39
    function_specifier         aller à l'état 40
    alignment_specifier        aller à l'état 41
    static_assert_declaration  aller à l'état 42
    translation_unit           aller à l'état 43
    external_declaration       aller à l'état 44
    function_definition        aller à l'état 45


État 1

  130 type_specifier: TYPEDEF_NAME .

    $défaut  réduction par utilisation de la règle 130 (type_specifier)


État 2

  109 storage_class_specifier: TYPEDEF .

    $défaut  réduction par utilisation de la règle 109 (storage_class_specifier)


État 3

  110 storage_class_specifier: EXTERN .

    $défaut  réduction par utilisation de la règle 110 (storage_class_specifier)


État 4

  111 storage_class_specifier: STATIC .

    $défaut  réduction par utilisation de la règle 111 (storage_class_specifier)


État 5

  113 storage_class_specifier: AUTO .

    $défaut  réduction par utilisation de la règle 113 (storage_class_specifier)


État 6

  114 storage_class_specifier: REGISTER .

    $défaut  réduction par utilisation de la règle 114 (storage_class_specifier)


État 7

  170 function_specifier: INLINE .

    $défaut  réduction par utilisation de la règle 170 (function_specifier)


État 8

  166 type_qualifier: CONST .

    $défaut  réduction par utilisation de la règle 166 (type_qualifier)


État 9

  167 type_qualifier: RESTRICT .

    $défaut  réduction par utilisation de la règle 167 (type_qualifier)


État 10

  168 type_qualifier: VOLATILE .

    $défaut  réduction par utilisation de la règle 168 (type_qualifier)


État 11

  124 type_specifier: BOOL .

    $défaut  réduction par utilisation de la règle 124 (type_specifier)


État 12

  116 type_specifier: CHAR .

    $défaut  réduction par utilisation de la règle 116 (type_specifier)


État 13

  117 type_specifier: SHORT .

    $défaut  réduction par utilisation de la règle 117 (type_specifier)


État 14

  118 type_specifier: INT .

    $défaut  réduction par utilisation de la règle 118 (type_specifier)


État 15

  119 type_specifier: LONG .

    $défaut  réduction par utilisation de la règle 119 (type_specifier)


État 16

  122 type_specifier: SIGNED .

    $défaut  réduction par utilisation de la règle 122 (type_specifier)


État 17

  123 type_specifier: UNSIGNED .

    $défaut  réduction par utilisation de la règle 123 (type_specifier)


État 18

  120 type_specifier: FLOAT .

    $défaut  réduction par utilisation de la règle 120 (type_specifier)


État 19

  121 type_specifier: DOUBLE .

    $défaut  réduction par utilisation de la règle 121 (type_specifier)


État 20

  115 type_specifier: VOID .

    $défaut  réduction par utilisation de la règle 115 (type_specifier)


État 21

  125 type_specifier: COMPLEX .

    $défaut  réduction par utilisation de la règle 125 (type_specifier)


État 22

  126 type_specifier: IMAGINARY .

    $défaut  réduction par utilisation de la règle 126 (type_specifier)


État 23

  136 struct_or_union: STRUCT .

    $défaut  réduction par utilisation de la règle 136 (struct_or_union)


État 24

  137 struct_or_union: UNION .

    $défaut  réduction par utilisation de la règle 137 (struct_or_union)


État 25

  153 enum_specifier: ENUM . '{' $@5 enumerator_list '}'
  155               | ENUM . '{' $@6 enumerator_list ',' '}'
  157               | ENUM . IDENTIFIER '{' $@7 enumerator_list '}'
  159               | ENUM . IDENTIFIER '{' $@8 enumerator_list ',' '}'
  160               | ENUM . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 46
    '{'         décalage et aller à l'état 47


État 26

  172 alignment_specifier: ALIGNAS . '(' type_name ')'
  173                    | ALIGNAS . '(' constant_expression ')'

    '('  décalage et aller à l'état 48


État 27

  165 atomic_type_specifier: ATOMIC . '(' type_name ')'
  169 type_qualifier: ATOMIC .

    '('  décalage et aller à l'état 49

    '('       [réduction par utilisation de la règle 169 (type_qualifier)]
    $défaut  réduction par utilisation de la règle 169 (type_qualifier)


État 28

  171 function_specifier: NORETURN .

    $défaut  réduction par utilisation de la règle 171 (function_specifier)


État 29

  245 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  décalage et aller à l'état 50


État 30

  112 storage_class_specifier: THREAD_LOCAL .

    $défaut  réduction par utilisation de la règle 112 (storage_class_specifier)


État 31

  283 external_declaration: declaration .

    $défaut  réduction par utilisation de la règle 283 (external_declaration)


État 32

   92 declaration: declaration_specifiers . ';'
   93            | declaration_specifiers . init_declarator_list ';'
  284 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  285                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  décalage et aller à l'état 51
    '('         décalage et aller à l'état 52
    '*'         décalage et aller à l'état 53
    ';'         décalage et aller à l'état 54

    init_declarator_list  aller à l'état 55
    init_declarator       aller à l'état 56
    declarator            aller à l'état 57
    direct_declarator     aller à l'état 58
    pointer               aller à l'état 59


État 33

   95 declaration_specifiers: storage_class_specifier . declaration_specifiers
   96                       | storage_class_specifier .

    TYPEDEF_NAME  décalage et aller à l'état 1
    TYPEDEF       décalage et aller à l'état 2
    EXTERN        décalage et aller à l'état 3
    STATIC        décalage et aller à l'état 4
    AUTO          décalage et aller à l'état 5
    REGISTER      décalage et aller à l'état 6
    INLINE        décalage et aller à l'état 7
    CONST         décalage et aller à l'état 8
    RESTRICT      décalage et aller à l'état 9
    VOLATILE      décalage et aller à l'état 10
    BOOL          décalage et aller à l'état 11
    CHAR          décalage et aller à l'état 12
    SHORT         décalage et aller à l'état 13
    INT           décalage et aller à l'état 14
    LONG          décalage et aller à l'état 15
    SIGNED        décalage et aller à l'état 16
    UNSIGNED      décalage et aller à l'état 17
    FLOAT         décalage et aller à l'état 18
    DOUBLE        décalage et aller à l'état 19
    VOID          décalage et aller à l'état 20
    COMPLEX       décalage et aller à l'état 21
    IMAGINARY     décalage et aller à l'état 22
    STRUCT        décalage et aller à l'état 23
    UNION         décalage et aller à l'état 24
    ENUM          décalage et aller à l'état 25
    ALIGNAS       décalage et aller à l'état 26
    ATOMIC        décalage et aller à l'état 27
    NORETURN      décalage et aller à l'état 28
    THREAD_LOCAL  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 96 (declaration_specifiers)

    declaration_specifiers     aller à l'état 60
    storage_class_specifier    aller à l'état 33
    type_specifier             aller à l'état 34
    struct_or_union_specifier  aller à l'état 35
    struct_or_union            aller à l'état 36
    enum_specifier             aller à l'état 37
    atomic_type_specifier      aller à l'état 38
    type_qualifier             aller à l'état 39
    function_specifier         aller à l'état 40
    alignment_specifier        aller à l'état 41


État 34

   97 declaration_specifiers: type_specifier . declaration_specifiers
   98                       | type_specifier .

    TYPEDEF_NAME  décalage et aller à l'état 1
    TYPEDEF       décalage et aller à l'état 2
    EXTERN        décalage et aller à l'état 3
    STATIC        décalage et aller à l'état 4
    AUTO          décalage et aller à l'état 5
    REGISTER      décalage et aller à l'état 6
    INLINE        décalage et aller à l'état 7
    CONST         décalage et aller à l'état 8
    RESTRICT      décalage et aller à l'état 9
    VOLATILE      décalage et aller à l'état 10
    BOOL          décalage et aller à l'état 11
    CHAR          décalage et aller à l'état 12
    SHORT         décalage et aller à l'état 13
    INT           décalage et aller à l'état 14
    LONG          décalage et aller à l'état 15
    SIGNED        décalage et aller à l'état 16
    UNSIGNED      décalage et aller à l'état 17
    FLOAT         décalage et aller à l'état 18
    DOUBLE        décalage et aller à l'état 19
    VOID          décalage et aller à l'état 20
    COMPLEX       décalage et aller à l'état 21
    IMAGINARY     décalage et aller à l'état 22
    STRUCT        décalage et aller à l'état 23
    UNION         décalage et aller à l'état 24
    ENUM          décalage et aller à l'état 25
    ALIGNAS       décalage et aller à l'état 26
    ATOMIC        décalage et aller à l'état 27
    NORETURN      décalage et aller à l'état 28
    THREAD_LOCAL  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 98 (declaration_specifiers)
